# inference_backends_benchmarks

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  bench.sh  ort_bench.py  sgx_buildenv.mk
.devcontainer/: devcontainer.json
app/: Cargo.toml  Makefile  build.rs
app/src/: main.rs
benches/: Cargo.toml
benches/src/: lib.rs
enclave/: Cargo.toml  Enclave.edl  Makefile  Xargo.toml
enclave/src/: lib.rs
models/: bert_setup.py  bert_setup.sh  facenet_setup.sh  gpt-neo-2.7b_setup.py  gpt-neo-2.7b_setup.sh  requirements.in  requirements.txt  wav2vec2_setup.sh  yolov5n6_setup.py  yolov5n6_setup.sh  yolov5s_setup.py  yolov5s_setup.sh
